demo-setup/service-mesh/rtp-ui-svc-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rtp-ui
  namespace: rtp-demo
spec:
  host: rtp-ui
  subsets:
  - name: v1
    labels:
      version: v1
